--------------------------------------------------------------------------------
icesSAG 1.1-0 (2016-08-21)
--------------------------------------------------------------------------------
o Improved XML parsing, so both leading and trailing white space is removed.

o Improved XML parsing, so "" and "NA" is converted to NA.

o Improved XML parsing, so data frame columns are automatically coerced to the
  appropriate storage mode (character, numeric, integer).




--------------------------------------------------------------------------------
icesSAG 1.0-0 (2016-08-09)
--------------------------------------------------------------------------------
o Initial release.