@@ -2,7 +2,8 @@
 #'
 #' Get a summary table of historical stock size, recruitment, and fishing pressure.
 #'
-#' @param year the assessment year, e.g. 2010. All years can be queried with 0.
+#' @param year the assessment year, e.g. 2015, or 0 to process all years.
+#' @param stock a stock name, e.g. cod-347d, or NULL to process all stocks.
 #'
 #' @return A data frame.
 #'
@@ -16,23 +17,21 @@
 #' @author Colin Millar and Scott Large.
 #'
 #' @examples
-#' \dontrun{
-#' sumtab <- getSummaryTable(2015)
-#' }
+#' sumtab <- getSummaryTable(2015, "cod-347d")
 #'
 #' @export
 #'
 #' @importFrom dplyr bind_rows
 
-getSummaryTable <- function(year) {
+getSummaryTable <- function(year, stock = NULL) {
   # check web services are running
   if (!checkSAGWebserviceOK()) return (FALSE)
 
   # check year
   if (!checkYearOK(year)) return (FALSE)
 
-  # get keys for year
-  stock_list <- getListStocks(year = year)
+  # get keys for year and stock
+  stock_list <- getListStocks(year = year, stock = stock)
   published_keys <- unique(stock_list$key[!grepl("Not", stock_list$Status)])
 
   # read and parse XML from API
