@@ -4,10 +4,12 @@
 \alias{getFishStockReferencePoints}
 \title{Get Reference Points}
 \usage{
-getFishStockReferencePoints(year)
+getFishStockReferencePoints(year, stock = NULL)
 }
 \arguments{
-\item{year}{the assessment year, e.g. 2010. All years can be queried with 0.}
+\item{year}{the assessment year, e.g. 2015, or 0 to process all years.}
+
+\item{stock}{a stock name, e.g. cod-347d, or NULL to process all stocks.}
 }
 \value{
 A data frame.
@@ -16,9 +18,7 @@ A data frame.
 Get biological reference points for all stocks in a given assessment year.
 }
 \examples{
-\dontrun{
-refpts <- getFishStockReferencePoints(2015)
-}
+refpts <- getFishStockReferencePoints(2015, "cod-347d")
 
 }
 \author{
